# ai-native-reader-deepseek

./: .gitignore  CLAUDE.md  README.md  ai_native_pdf_reader_design_v0.5_agent_ready.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/specs/: 2026-06-21-ai-panel-improvements-design.md  2026-06-22-library-folder-design.md  2026-06-24-epub-support-design.md
src/: App.css  App.tsx  index.css  pdfjs.ts
src-tauri/: .gitattributes  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pdf.rs
src-tauri/src/ai/: context_builder.rs  mod.rs  prompts.rs  provider.rs
src-tauri/src/commands/: ai.rs  documents.rs  epub.rs  library.rs  mod.rs  notes.rs  pages.rs  settings.rs  toc.rs  translate.rs
src-tauri/src/db/: migrations.rs  models.rs
src-tauri/src/epub/: cover.rs  extractor.rs  mod.rs
src/components/: AiMarkdown.tsx  AiSidebar.tsx  CenterViewer.tsx  Icons.tsx  LeftSidebar.tsx  PdfViewer.tsx  SettingsPanel.tsx  ShortcutsModal.tsx
src/features/ai/: aiPanelHelpers.ts  promptScope.ts  workflowPages.ts
src/features/citations/: citationParser.ts
src/features/epub/: EpubViewer.tsx  epubProgress.ts
src/features/ink/: InkCanvasOverlay.tsx  InkToolbarControls.tsx  inkGeometry.ts
src/features/pdf/: PageView.tsx  PdfTextLayer.tsx  SelectionMenu.tsx  pdfInitialZoom.ts  pdfTextExtraction.ts
src/features/toc/: TocSidebar.tsx  tocTree.ts
src/stores/: aiStore.ts  documentStore.ts  notesStore.ts  settingsStore.ts  undoStore.ts
tests/: aiPanelHelpers.test.ts  citationParser.test.ts  documentStore.test.ts  epubProgress.test.ts  inkGeometry.test.ts  pdfInitialZoom.test.ts  pdfTextExtraction.test.ts  pdfTextLayer.test.ts  tocTree.test.ts  undoStore.test.ts  workflowPages.test.ts
