[package]
name = "rustybooks"
version = "0.1.0"
description = "RustyBooks"
authors = ["wei"]
edition = "2021"

[lib]
name = "ai_native_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6", features = ["macos_fsevent"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
tokio-stream = "0.1"
epub = "2.1"
lopdf = "0.34"
scraper = "0.18"
leptess = "0.14"

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
